--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@saucelabs/sl-component-icons": "^1.1.35",
     "react": "^16.6.3",
+    "react-clipboard.js": "^2.0.1",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-syntax-highlighter": "^10.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
